src/objects/Flow_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>Dedupe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dedupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friendly__c</fullName>
        <description>Friendly value to use in flows</description>
        <label>Friendly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:45 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:15 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:45 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:15 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:45 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:15 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <label>Master</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Business Formations</fullName>
                </value>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Document - Error</fullName>
                </value>
                <value>
                    <fullName>Document - Shipping</fullName>
                </value>
                <value>
                    <fullName>Feedback (No Issue)</fullName>
                </value>
                <value>
                    <fullName>Order - Billing</fullName>
                </value>
                <value>
                    <fullName>Order - Status</fullName>
                </value>
                <value>
                    <fullName>Order - Update Account or Contact</fullName>
                </value>
                <value>
                    <fullName>Order - Update or Cancel</fullName>
                </value>
                <value>
                    <fullName>Other Reason</fullName>
                </value>
                <value>
                    <fullName>Product Instructions or Execution</fullName>
                </value>
                <value>
                    <fullName>Product Question</fullName>
                </value>
                <value>
                    <fullName>Web Site - Technical Issues</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Canceled (no refund due)</fullName>
                </value>
                <value>
                    <fullName>Order Saved</fullName>
                </value>
                <value>
                    <fullName>Outbound Result</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Product not offered</fullName>
                </value>
                <value>
                    <fullName>Refund Requested</fullName>
                </value>
                <value>
                    <fullName>Requires Transfer</fullName>
                </value>
                <value>
                    <fullName>Resolved Issue</fullName>
                </value>
                <value>
                    <fullName>Other (describe in case comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub__c</fullName>
        <label>Sub</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>501(c)3 Preparation</fullName>
                </value>
                <value>
                    <fullName>Abandoner</fullName>
                </value>
                <value>
                    <fullName>Access Corp Center</fullName>
                </value>
                <value>
                    <fullName>Access Legal Form</fullName>
                </value>
                <value>
                    <fullName>Access My Account</fullName>
                </value>
                <value>
                    <fullName>Account Manager EP Starter</fullName>
                </value>
                <value>
                    <fullName>Account Manager Manager Call-Back</fullName>
                </value>
                <value>
                    <fullName>Add an Item (add ons)</fullName>
                </value>
                <value>
                    <fullName>Add Authorized Contact</fullName>
                </value>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Adult guardianship</fullName>
                </value>
                <value>
                    <fullName>Alt Names</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Annual Reports</fullName>
                </value>
                <value>
                    <fullName>Annulments</fullName>
                </value>
                <value>
                    <fullName>Answered Question about Product</fullName>
                </value>
                <value>
                    <fullName>Answered Questions</fullName>
                </value>
                <value>
                    <fullName>ASD-Copyright Correction Letter</fullName>
                </value>
                <value>
                    <fullName>ASD-LRS</fullName>
                </value>
                <value>
                    <fullName>Asset Protection Trust</fullName>
                </value>
                <value>
                    <fullName>AS Subscription</fullName>
                </value>
                <value>
                    <fullName>AS Subscription Help Info</fullName>
                </value>
                <value>
                    <fullName>Attorney Consultation Requests</fullName>
                </value>
                <value>
                    <fullName>Attorney Line</fullName>
                </value>
                <value>
                    <fullName>Attorney Prepared Provisional Patent</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>BBB call back</fullName>
                </value>
                <value>
                    <fullName>Biz BCS Manager Call-Back</fullName>
                </value>
                <value>
                    <fullName>Biz Name Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Reason</fullName>
                </value>
                <value>
                    <fullName>Resolution</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Flow Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Master__c</columns>
        <columns>Sub__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Friendly__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Master__c</columns>
        <columns>Sub__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Friendly__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product</value>
        </filters>
        <label>All - Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Hector</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Master__c</columns>
        <columns>Sub__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Friendly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product,Reason,Resolution</value>
        </filters>
        <label>All - Hector</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Queue</fullName>
        <columns>NAME</columns>
        <columns>Sub__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Queue</value>
        </filters>
        <label>Queue</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FL-{0000000000}</displayFormat>
        <label>Flow Lookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>